--- a/tur.html
+++ b/tur.html
@@ -51,7 +51,7 @@
 		<tr>
     		<th>De Santa</th>
     		<th>Dark Night</th>
-    		<th>Age of Wolrd</th>
+    		<th>Age of World</th>
     		<th>Club Games</th>
    		</tr>
    		<tr><td align="center">0</td><td align="center">0</td><td align="center">0</td><td align="center">0</td></tr>
